# internetTester

./: .gitignore  README.md  app.py  build.py  network_tests.db  pyproject.toml
static/: script copy.js  script.js  settings.js  style.css
templates/: index.html  index_old.html  settings.html
